button z-index fix

--- a/components/sections/league/index.module.css
+++ b/components/sections/league/index.module.css
@@ -48,6 +48,7 @@
   .image {
     position: relative;
     top: -70px;
+    z-index: -1;
 
     @media (--d) {
       position: absolute;
